Squashed commit of the following:
commit 1cb401fac8a8e00a82f7464a096956131b56822a
Author: Bryan Chen <bryanchen74@gmail.com>
Date:   Mon Jul 10 01:09:09 2023 -0400

    Release

commit 70e4bb9cc8745132e98864c6c6a0ed12777729b7
Author: Bryan Chen <bryanchen74@gmail.com>
Date:   Mon Jul 10 01:05:23 2023 -0400

    Update username

commit 327a17ded8158678b70d935a41738e8a4dd95532
Author: Bryan Chen <bryanchen74@gmail.com>
Date:   Sat Jul 8 23:26:32 2023 -0400

    Update index.html

commit 1b7155ce03f3b3b70a3177afd8244a0107cfd589
Author: Bryan Chen <bryanchen74@gmail.com>
Date:   Sat Jul 8 23:24:16 2023 -0400

    Fix test cases

commit 576dfe3e7dcdddfb30d597f5a432e3bdc0a539cd
Author: Bryan Chen <bryanchen74@gmail.com>
Date:   Sat Jul 8 04:35:37 2023 -0400

    Keyboard

commit f9f4287ec9a2e5d6e6e0d51523a4b4a775c0e7fd
Author: Bryan Chen <bryanchen74@gmail.com>
Date:   Sat Jul 8 04:27:53 2023 -0400

    Snackbar bug

commit 465448c89b634961d29dd2f6ac04dbed0d23adc4
Author: Bryan Chen <bryanchen74@gmail.com>
Date:   Sat Jul 8 04:11:10 2023 -0400

    Remove keyboard press animation

commit 2e56f7c7dbc752d664b767d79d6bc1671fcbfe6d
Author: Bryan Chen <bryanchen74@gmail.com>
Date:   Sat Jul 8 00:13:56 2023 -0400

    Remove maskable icon

commit 12413b3210a609875dffac927bec60f068db6b2d
Author: Bryan Chen <bryanchen74@gmail.com>
Date:   Sat Jul 8 00:13:02 2023 -0400

    Update maskable icon

commit 3703496f540e10af04fa7f0973e995c49af72c4e
Author: Bryan Chen <bryanchen74@gmail.com>
Date:   Sat Jul 8 00:03:29 2023 -0400

    Update manifest

commit 6691a36a91c2af6789180647bd5f7b9a231e4899
Author: Bryan Chen <bryanchen74@gmail.com>
Date:   Fri Jul 7 23:59:01 2023 -0400

    Update maskable icon

commit cc259732ebaffe517a81d3fffb30a44077dbef06
Author: Bryan Chen <bryanchen74@gmail.com>
Date:   Fri Jul 7 23:56:24 2023 -0400

    Update theme color

commit 77e310a6ee8248051c5f0f6397e526081537477c
Author: Bryan Chen <bryanchen74@gmail.com>
Date:   Fri Jul 7 23:47:31 2023 -0400

    U

--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -1,15 +1,19 @@
 .header {
   width: 100%;
 
+  position: sticky;
+  top: 0;
+  z-index: 10;
+
   display: flex;
   flex-direction: column;
   align-items: center;
   background-color: var(--gray-1);
-  padding: 0px 4px 4px 4px;
+  padding: 4px 8px 4px 8px;
   border-bottom: 1px solid var(--gray-3);
 }
-.header.welcome {
-  padding: 0px 8px 4px 8px;
+.header.game {
+  padding: 0px 4px 4px 4px;
 }
 
 .row1 {
@@ -20,7 +24,7 @@
   gap: 4px;
   padding-top: 4px;
 }
-.header.wide .row1 {
+.header.wide.game .row1 {
   max-width: var(--width-wide);
 }
 
@@ -32,36 +36,41 @@
   display: flex;
   align-items: center;
   gap: 4px;
-  font-size: 14px;
+  font-size: 24px;
 }
 .header.welcome .title {
   margin-left: 40px;
   margin-right: -40px;
   transform: translateX(-36px);
-  font-size: 24px;
+}
+.header.game .title {
+  font-size: 16px;
 }
 @media screen and (min-width: 400px) {
   .title {
-    font-size: 18px;
+    font-size: 30px;
+  }
+  .header.game .title {
+    font-size: 20px;
   }
 }
 @media screen and (min-width: 600px) {
   .title {
-    font-size: 24px;
-  }
-  .header.welcome .title {
     font-size: 30px;
+  }
+  .header.game .title {
+    font-size: 24px;
   }
 }
 .text {
   text-align: center;
   flex: 1;
 }
-.welcome .text {
+.header.welcome .text {
   text-align: left;
 }
 
-.icon {
+.header .icon {
   background-color: transparent;
   border: none;
   padding: 0px;
@@ -93,7 +102,7 @@
     font-size: 16px;
   }
 }
-.header.welcome .row2 {
+.header:not(.game) .row2 {
   visibility: hidden;
   height: 0;
   opacity: 0;
@@ -118,7 +127,7 @@
   gap: 1px;
   transition: opacity 0.25s ease;
 }
-.header.welcome .row3 {
+.header:not(.game) .row3 {
   visibility: hidden;
   height: 0;
   opacity: 0;
@@ -135,6 +144,7 @@
   cursor: pointer;
   flex: 1;
   color: var(--white);
+  transition: background-color 0.1s ease;
 }
 .chip.green {
   background-color: var(--green);
@@ -147,4 +157,7 @@
 .chip.white {
   background-color: var(--white);
   color: var(--black);
+}
+.header.disableAnimations .chip {
+  transition: none;
 }
