--- a/src/components/common/Modal/Modal.module.css
+++ b/src/components/common/Modal/Modal.module.css
@@ -4,21 +4,18 @@
   bottom: 0;
   left: 0;
   right: 0;
+  z-index: 20;
+
   display: flex;
   align-items: center;
   justify-content: center;
-  z-index: 10;
-  background-color: #00000055;
   padding: 12px;
-  animation: fadeIn 0.25s ease;
+
+  transition: opacity 0.25s ease;
 }
-@keyframes fadeIn {
-  0% {
-    opacity: 0;
-  }
-  100% {
-    opacity: 1;
-  }
+.modalWrapper.hidden {
+  opacity: 0;
+  pointer-events: none;
 }
 
 .modal {
@@ -29,19 +26,25 @@
   background-color: var(--gray-1);
   border: 1px solid var(--white);
   border-radius: 4px;
+  z-index: 22;
 
   overflow-y: auto;
 
   display: flex;
   flex-direction: column;
   gap: 4px;
-  animation: slideUp 0.25s ease;
+  transition: transform 0.25s ease;
 }
-@keyframes slideUp {
-  0% {
-    transform: translateY(36px);
-  }
-  100% {
-    transform: none;
-  }
+.modalWrapper.hidden.animate .modal {
+  transform: translateY(36px);
+}
+
+.modalBackground {
+  position: fixed;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  z-index: 21;
+  background-color: #0000007f;
 }
