--- a/src/components/Keyboard/Keyboard.module.css
+++ b/src/components/Keyboard/Keyboard.module.css
@@ -32,8 +32,8 @@
   cursor: pointer;
   font-size: 25px;
   user-select: none;
-  transition: filter 0.1s ease, background-color 0.1s ease;
   padding: 0;
+  transition: background-color 0.1s ease;
   color: var(--white);
 }
 @media screen and (min-width: 600px) {
