--- a/src/components/Stats/Stats.module.css
+++ b/src/components/Stats/Stats.module.css
@@ -1,13 +1,64 @@
+.container {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  position: relative;
+}
+
+.main {
+  max-width: 600px;
+  width: 100%;
+  padding: 30px 12px 30px 12px;
+  animation: fadeIn 0.5s ease;
+  gap: 8px;
+
+  display: flex;
+  flex-direction: column;
+}
+@keyframes fadeIn {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+
+.loading {
+  position: absolute;
+  left: 0;
+  right: 0;
+  top: 0;
+  bottom: 0;
+  z-index: 15;
+  background-color: rgba(0, 0, 0, 0.9);
+
+  display: flex;
+  padding: 24px 24px 24px 24px;
+  justify-content: center;
+  font-size: 24px;
+}
+
+.tabs {
+  display: grid;
+  grid-template-columns: 1fr;
+  gap: 8px;
+}
+@media screen and (min-width: 600px) {
+  .tabs {
+    grid-template-columns: 2fr 4fr;
+  }
+}
+
 .statsContainer {
   display: flex;
   flex-direction: column;
   gap: 8px;
   margin-bottom: 4px;
-  overflow-y: auto;
-  height: 500px;
 }
 
 .title {
+  margin-top: 16px;
   text-align: center;
   font-size: 24px;
 }
@@ -39,6 +90,7 @@
 
   display: flex;
   gap: 4px;
+  transition: width 0.33s ease;
 }
 .barColor {
   flex: 1;
@@ -46,8 +98,10 @@
 }
 .times {
   display: grid;
-  grid-template-columns: auto 1fr;
+  grid-template-columns: auto auto;
   gap: 8px;
+  font-size: 18px;
+  margin-bottom: 8px;
 }
 
 .exportContainer {
