Fix board hiding with disable animations

--- a/src/components/Boards/Boards.module.css
+++ b/src/components/Boards/Boards.module.css
@@ -86,6 +86,9 @@
     position: fixed;
   }
 }
+.boards.disableAnimations .board.hidden {
+  display: none;
+}
 .scrollIntoView {
   position: absolute;
   top: -4px;
